ADDED: method to load screts on startup,. but they seem to be ignored